project.output
Terminals unused in grammar

    ANY_CHARACTER
    VAR
    TRUE
    FALSE
    QUESTION
    DQ
    SQ
    LSB
    RSB


State 0 conflicts: 25 shift/reduce, 2 reduce/reduce
State 27 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 47 conflicts: 3 reduce/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 79 conflicts: 25 shift/reduce, 2 reduce/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 82 conflicts: 24 shift/reduce, 1 reduce/reduce
State 83 conflicts: 25 shift/reduce, 2 reduce/reduce
State 84 conflicts: 24 shift/reduce, 1 reduce/reduce
State 85 conflicts: 24 shift/reduce, 1 reduce/reduce
State 86 conflicts: 24 shift/reduce, 1 reduce/reduce
State 87 conflicts: 24 shift/reduce, 1 reduce/reduce
State 88 conflicts: 24 shift/reduce, 1 reduce/reduce
State 89 conflicts: 24 shift/reduce, 1 reduce/reduce
State 90 conflicts: 24 shift/reduce, 1 reduce/reduce
State 91 conflicts: 24 shift/reduce, 1 reduce/reduce
State 92 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 108 conflicts: 24 shift/reduce, 1 reduce/reduce
State 109 conflicts: 24 shift/reduce, 1 reduce/reduce
State 118 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce, 1 reduce/reduce
State 131 conflicts: 1 shift/reduce
State 134 conflicts: 24 shift/reduce, 1 reduce/reduce
State 139 conflicts: 24 shift/reduce, 1 reduce/reduce
State 140 conflicts: 24 shift/reduce, 1 reduce/reduce
State 152 conflicts: 24 shift/reduce, 1 reduce/reduce
State 159 conflicts: 24 shift/reduce, 1 reduce/reduce
State 176 conflicts: 1 shift/reduce
State 178 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce
State 190 conflicts: 1 shift/reduce, 1 reduce/reduce
State 208 conflicts: 1 shift/reduce
State 225 conflicts: 25 shift/reduce, 3 reduce/reduce
State 237 conflicts: 1 shift/reduce
State 241 conflicts: 1 shift/reduce
State 244 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce
State 258 conflicts: 25 shift/reduce, 3 reduce/reduce
State 267 conflicts: 25 shift/reduce, 3 reduce/reduce
State 269 conflicts: 25 shift/reduce, 3 reduce/reduce
State 270 conflicts: 1 shift/reduce
State 271 conflicts: 1 shift/reduce
State 272 conflicts: 1 shift/reduce
State 273 conflicts: 1 shift/reduce
State 279 conflicts: 3 reduce/reduce
State 291 conflicts: 1 shift/reduce
State 292 conflicts: 1 shift/reduce
State 293 conflicts: 1 shift/reduce
State 294 conflicts: 1 shift/reduce
State 298 conflicts: 1 shift/reduce
State 308 conflicts: 1 shift/reduce
State 309 conflicts: 1 shift/reduce
State 310 conflicts: 1 shift/reduce
State 315 conflicts: 1 shift/reduce
State 327 conflicts: 1 shift/reduce, 1 reduce/reduce
State 330 conflicts: 1 shift/reduce
State 331 conflicts: 24 shift/reduce, 3 reduce/reduce
State 332 conflicts: 1 shift/reduce
State 333 conflicts: 1 shift/reduce
State 334 conflicts: 1 shift/reduce
State 335 conflicts: 1 shift/reduce
State 336 conflicts: 1 shift/reduce
State 340 conflicts: 1 shift/reduce
State 345 conflicts: 24 shift/reduce, 3 reduce/reduce
State 347 conflicts: 1 shift/reduce
State 352 conflicts: 1 shift/reduce
State 353 conflicts: 1 shift/reduce
State 362 conflicts: 24 shift/reduce, 3 reduce/reduce
State 364 conflicts: 1 shift/reduce
State 365 conflicts: 1 shift/reduce
State 366 conflicts: 1 shift/reduce
State 367 conflicts: 1 shift/reduce
State 369 conflicts: 1 shift/reduce
State 375 conflicts: 1 shift/reduce
State 385 conflicts: 1 shift/reduce
State 387 conflicts: 1 shift/reduce
State 401 conflicts: 1 shift/reduce
State 403 conflicts: 1 shift/reduce
State 404 conflicts: 1 shift/reduce
State 405 conflicts: 1 shift/reduce
State 406 conflicts: 1 shift/reduce
State 407 conflicts: 1 shift/reduce
State 409 conflicts: 1 shift/reduce
State 410 conflicts: 1 shift/reduce
State 411 conflicts: 1 shift/reduce
State 412 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | class_declaration none_or_newlines program
    3        | statement none_or_newlines program

    4 $@1: ε

    5 class_declaration: access_modifier CLASS CLASS_ID LCB $@1 none_or_newlines class_body none_or_newlines RCB

    6 $@2: ε

    7 class_declaration: CLASS CLASS_ID LCB $@2 none_or_newlines class_body none_or_newlines RCB

    8 class_body: ε
    9           | class_declaration none_or_newlines class_body
   10           | statement none_or_newlines class_body

   11 identifier_list: ID
   12                | ID COMMA identifier_list

   13 assignment_list: ID ASSIGN exp
   14                | ID ASSIGN exp COMMA assignment_list
   15                | ID ASSIGN DQ_STRING_DQ
   16                | ID ASSIGN DQ_STRING_DQ COMMA assignment_list
   17                | ID ASSIGN variable_reference
   18                | ID ASSIGN variable_reference COMMA assignment_list
   19                | ID ASSIGN method_call
   20                | ID ASSIGN method_call COMMA assignment_list
   21                | ID ASSIGN object_creation
   22                | ID ASSIGN object_creation COMMA assignment_list

   23 variable_declaration: data_type identifier_list
   24                     | access_modifier data_type identifier_list
   25                     | access_modifier data_type assignment_list
   26                     | data_type assignment_list
   27                     | assignment_list

   28 variable_reference: ID

   29 $@3: ε

   30 method_declaration: access_modifier data_type ID LP none_or_newlines none_or_multiple_parameters none_or_newlines RP LCB $@3 none_or_newlines method_body none_or_newlines RCB

   31 $@4: ε

   32 method_declaration: data_type ID LP none_or_newlines none_or_multiple_parameters none_or_newlines RP LCB $@4 none_or_newlines method_body none_or_newlines RCB

   33 none_or_multiple_parameters: ε
   34                            | parameter parameters

   35 parameters: ε
   36           | COMMA none_or_newlines parameter parameters

   37 parameter: data_type ID

   38 method_body: ε
   39            | statement none_or_newlines method_body

   40 statement: ε
   41          | method_call none_or_newlines statement
   42          | if_statement none_or_newlines statement
   43          | do_while_statement none_or_newlines statement
   44          | for_statement none_or_newlines statement
   45          | switch_statement none_or_newlines statement
   46          | return_statement none_or_newlines statement
   47          | break_statement none_or_newlines statement
   48          | print_statement none_or_newlines statement
   49          | exp SEMICOLON none_or_newlines statement
   50          | relational_exp SEMICOLON none_or_newlines statement
   51          | DQ_STRING_DQ SEMICOLON none_or_newlines statement
   52          | variable_declaration SEMICOLON none_or_newlines statement
   53          | method_declaration none_or_newlines statement
   54          | object_creation none_or_newlines statement
   55          | variable_reference SEMICOLON none_or_newlines statement
   56          | member_access none_or_newlines statement

   57 assignment_statement: data_type ID ASSIGN exp
   58                     | data_type ID ASSIGN variable_reference

   59 method_call: ID LP none_or_newlines none_or_multiple_arguments none_or_newlines RP SEMICOLON

   60 none_or_multiple_arguments: ε
   61                           | parameter arguments
   62                           | variable_reference arguments

   63 arguments: ε
   64          | COMMA none_or_newlines parameter arguments
   65          | COMMA none_or_newlines variable_reference arguments

   66 if_statement: IF LP none_or_newlines exp none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else
   67             | IF LP none_or_newlines relational_exp none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else
   68             | IF LP none_or_newlines variable_reference none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else
   69             | IF LP none_or_newlines method_call none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else

   70 none_or_multiple_elif: ε
   71                      | ELIF LP exp RP LCB none_or_newlines statement none_or_newlines RCB none_or_multiple_elif
   72                      | ELIF LP relational_exp RP LCB none_or_newlines statement none_or_newlines RCB none_or_multiple_elif
   73                      | ELIF LP variable_reference RP LCB none_or_newlines statement none_or_newlines RCB none_or_multiple_elif
   74                      | ELIF LP method_call RP LCB none_or_newlines statement none_or_newlines RCB none_or_multiple_elif

   75 none_or_one_else: ε
   76                 | ELSE LCB none_or_newlines statement none_or_newlines RCB

   77 do_while_statement: DO LCB none_or_newlines statement none_or_newlines RCB WHILE LP none_or_newlines relational_exp none_or_newlines RP SEMICOLON
   78                   | DO LCB none_or_newlines statement none_or_newlines RCB WHILE LP none_or_newlines variable_reference none_or_newlines RP SEMICOLON

   79 for_statement: FOR LP none_or_newlines first_and_third_loop_statement SEMICOLON none_or_newlines second_loop_statement SEMICOLON none_or_newlines first_and_third_loop_statement none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB

   80 first_and_third_loop_statement: ε
   81                               | assignment_statement

   82 second_loop_statement: ε
   83                      | relational_exp

   84 switch_statement: SWITCH LP none_or_newlines exp none_or_newlines RP LCB none_or_newlines one_or_more_cases none_or_newlines default_case none_or_newlines RCB
   85                 | SWITCH LP none_or_newlines SQ_ANYCHAR_SQ none_or_newlines RP LCB none_or_newlines one_or_more_cases none_or_newlines default_case none_or_newlines RCB

   86 default_case: ε
   87             | DEFAULT COLON none_or_newlines statement

   88 one_or_more_cases: cases none_or_newlines multiple_cases

   89 multiple_cases: ε
   90               | cases none_or_newlines multiple_cases

   91 cases: CASE case_expression COLON none_or_newlines statement

   92 case_expression: CONST
   93                | SQ_ANYCHAR_SQ

   94 return_statement: RETURN exp SEMICOLON
   95                 | RETURN variable_reference SEMICOLON
   96                 | RETURN method_call SEMICOLON

   97 break_statement: BREAK SEMICOLON

   98 print_statement: PRINT LP DQ_STRING_DQ single_or_multiple_variables RP SEMICOLON

   99 single_or_multiple_variables: ε
  100                             | COMMA ID single_or_multiple_variables

  101 exp: factor
  102    | exp ADD factor
  103    | exp SUB factor

  104 factor: term
  105       | factor MUL term
  106       | factor DIV term
  107       | factor MOD term

  108 term: unary
  109     | term POW unary

  110 relational_exp: relational_factor
  111               | relational_exp EQ relational_factor
  112               | relational_exp NEQ relational_factor
  113               | relational_exp LT relational_factor
  114               | relational_exp GT relational_factor
  115               | relational_exp LE relational_factor
  116               | relational_exp GE relational_factor

  117 relational_factor: logical_term
  118                  | relational_factor AND logical_term
  119                  | relational_factor OR logical_term

  120 logical_term: unary
  121             | NOT unary

  122 unary: primary
  123      | ADD primary
  124      | SUB primary

  125 primary: CONST
  126        | DOUBLE_CONST
  127        | variable_reference
  128        | LP exp RP
  129        | LP relational_exp RP

  130 object_creation: CLASS_ID ID ASSIGN NEW CLASS_ID LP RP SEMICOLON

  131 $@5: ε

  132 member_access: ID DOT member_access_body $@5 none_or_newlines

  133 member_access_body: ID SEMICOLON
  134                   | method_call

  135 access_modifier: PUBLIC
  136                | PRIVATE

  137 data_type: ε
  138          | INTEGER
  139          | CHAR
  140          | DOUBLE
  141          | BOOLEAN
  142          | STRING
  143          | VOID

  144 none_or_newlines: ε
  145                 | NEWLINE none_or_newlines


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CONST <ival> (258) 92 125
    ID <sval> (259) 11 12 13 14 15 16 17 18 19 20 21 22 28 30 32 37 57 58 59 100 130 132 133
    CLASS_ID <sval> (260) 5 7 130
    ANY_CHARACTER <cval> (261)
    DOUBLE_CONST <dval> (262) 126
    VAR (263)
    NEWLINE (264) 145
    CLASS (265) 5 7
    PUBLIC (266) 135
    PRIVATE (267) 136
    INTEGER (268) 138
    CHAR (269) 139
    DOUBLE (270) 140
    BOOLEAN (271) 141
    STRING (272) 142
    VOID (273) 143
    NEW (274) 130
    RETURN (275) 94 95 96
    IF (276) 66 67 68 69
    ELIF (277) 71 72 73 74
    ELSE (278) 76
    SWITCH (279) 84 85
    CASE (280) 91
    DEFAULT (281) 87
    WHILE (282) 77 78
    DO (283) 77 78
    FOR (284) 79
    BREAK (285) 97
    TRUE (286)
    FALSE (287)
    PRINT (288) 98
    SQ_ANYCHAR_SQ (289) 85 93
    DQ_STRING_DQ (290) 15 16 51 98
    SEMICOLON (291) 49 50 51 52 55 59 77 78 79 94 95 96 97 98 130 133
    COMMA (292) 12 14 16 18 20 22 36 64 65 100
    DOT (293) 132
    QUESTION (294)
    COLON (295) 87 91
    DQ (296)
    SQ (297)
    ADD (298) 102 123
    SUB (299) 103 124
    MUL (300) 105
    DIV (301) 106
    MOD (302) 107
    POW (303) 109
    LP (304) 30 32 59 66 67 68 69 71 72 73 74 77 78 79 84 85 98 128 129 130
    RP (305) 30 32 59 66 67 68 69 71 72 73 74 77 78 79 84 85 98 128 129 130
    LSB (306)
    RSB (307)
    LCB (308) 5 7 30 32 66 67 68 69 71 72 73 74 76 77 78 79 84 85
    RCB (309) 5 7 30 32 66 67 68 69 71 72 73 74 76 77 78 79 84 85
    ASSIGN (310) 13 14 15 16 17 18 19 20 21 22 57 58 130
    EQ (311) 111
    NEQ (312) 112
    LT (313) 113
    GT (314) 114
    LE (315) 115
    GE (316) 116
    AND (317) 118
    OR (318) 119
    NOT (319) 121


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program (66)
        on left: 1 2 3
        on right: 0 2 3
    class_declaration (67)
        on left: 5 7
        on right: 2 9
    $@1 (68)
        on left: 4
        on right: 5
    $@2 (69)
        on left: 6
        on right: 7
    class_body (70)
        on left: 8 9 10
        on right: 5 7 9 10
    identifier_list <sval> (71)
        on left: 11 12
        on right: 12 23 24
    assignment_list <sval> (72)
        on left: 13 14 15 16 17 18 19 20 21 22
        on right: 14 16 18 20 22 25 26 27
    variable_declaration <sval> (73)
        on left: 23 24 25 26 27
        on right: 52
    variable_reference <sval> (74)
        on left: 28
        on right: 17 18 55 58 62 65 68 73 78 95 127
    method_declaration (75)
        on left: 30 32
        on right: 53
    $@3 (76)
        on left: 29
        on right: 30
    $@4 (77)
        on left: 31
        on right: 32
    none_or_multiple_parameters (78)
        on left: 33 34
        on right: 30 32
    parameters (79)
        on left: 35 36
        on right: 34 36
    parameter (80)
        on left: 37
        on right: 34 36 61 64
    method_body (81)
        on left: 38 39
        on right: 30 32 39
    statement (82)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 3 10 39 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 66 67 68 69 71 72 73 74 76 77 78 79 87 91
    assignment_statement (83)
        on left: 57 58
        on right: 81
    method_call <sval> (84)
        on left: 59
        on right: 19 20 41 69 74 96 134
    none_or_multiple_arguments (85)
        on left: 60 61 62
        on right: 59
    arguments (86)
        on left: 63 64 65
        on right: 61 62 64 65
    if_statement (87)
        on left: 66 67 68 69
        on right: 42
    none_or_multiple_elif (88)
        on left: 70 71 72 73 74
        on right: 66 67 68 69 71 72 73 74
    none_or_one_else (89)
        on left: 75 76
        on right: 66 67 68 69
    do_while_statement (90)
        on left: 77 78
        on right: 43
    for_statement (91)
        on left: 79
        on right: 44
    first_and_third_loop_statement (92)
        on left: 80 81
        on right: 79
    second_loop_statement (93)
        on left: 82 83
        on right: 79
    switch_statement (94)
        on left: 84 85
        on right: 45
    default_case (95)
        on left: 86 87
        on right: 84 85
    one_or_more_cases (96)
        on left: 88
        on right: 84 85
    multiple_cases (97)
        on left: 89 90
        on right: 88 90
    cases (98)
        on left: 91
        on right: 88 90
    case_expression (99)
        on left: 92 93
        on right: 91
    return_statement (100)
        on left: 94 95 96
        on right: 46
    break_statement (101)
        on left: 97
        on right: 47
    print_statement (102)
        on left: 98
        on right: 48
    single_or_multiple_variables (103)
        on left: 99 100
        on right: 98 100
    exp (104)
        on left: 101 102 103
        on right: 13 14 49 57 66 71 84 94 102 103 128
    factor (105)
        on left: 104 105 106 107
        on right: 101 102 103 105 106 107
    term (106)
        on left: 108 109
        on right: 104 105 106 107 109
    relational_exp (107)
        on left: 110 111 112 113 114 115 116
        on right: 50 67 72 77 83 111 112 113 114 115 116 129
    relational_factor (108)
        on left: 117 118 119
        on right: 110 111 112 113 114 115 116 118 119
    logical_term (109)
        on left: 120 121
        on right: 117 118 119
    unary (110)
        on left: 122 123 124
        on right: 108 109 120 121
    primary (111)
        on left: 125 126 127 128 129
        on right: 122 123 124
    object_creation (112)
        on left: 130
        on right: 21 22 54
    member_access <sval> (113)
        on left: 132
        on right: 56
    $@5 (114)
        on left: 131
        on right: 132
    member_access_body <sval> (115)
        on left: 133 134
        on right: 132
    access_modifier (116)
        on left: 135 136
        on right: 5 24 25 30
    data_type <sval> (117)
        on left: 137 138 139 140 141 142 143
        on right: 23 24 25 26 30 32 37 57 58
    none_or_newlines (118)
        on left: 144 145
        on right: 2 3 5 7 9 10 30 32 36 39 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 59 64 65 66 67 68 69 71 72 73 74 76 77 78 79 84 85 87 88 90 91 132 145


State 0

    0 $accept: • program $end

    CONST         shift, and go to state 1
    ID            shift, and go to state 2
    CLASS_ID      shift, and go to state 3
    DOUBLE_CONST  shift, and go to state 4
    CLASS         shift, and go to state 5
    PUBLIC        shift, and go to state 6
    PRIVATE       shift, and go to state 7
    INTEGER       shift, and go to state 8
    CHAR          shift, and go to state 9
    DOUBLE        shift, and go to state 10
    BOOLEAN       shift, and go to state 11
    STRING        shift, and go to state 12
    VOID          shift, and go to state 13
    RETURN        shift, and go to state 14
    IF            shift, and go to state 15
    SWITCH        shift, and go to state 16
    DO            shift, and go to state 17
    FOR           shift, and go to state 18
    BREAK         shift, and go to state 19
    PRINT         shift, and go to state 20
    DQ_STRING_DQ  shift, and go to state 21
    ADD           shift, and go to state 22
    SUB           shift, and go to state 23
    LP            shift, and go to state 24
    NOT           shift, and go to state 25

    $end          reduce using rule 1 (program)
    $end          [reduce using rule 40 (statement)]
    CONST         [reduce using rule 40 (statement)]
    ID            [reduce using rule 40 (statement)]
    ID            [reduce using rule 137 (data_type)]
    CLASS_ID      [reduce using rule 40 (statement)]
    DOUBLE_CONST  [reduce using rule 40 (statement)]
    NEWLINE       reduce using rule 40 (statement)
    CLASS         [reduce using rule 40 (statement)]
    PUBLIC        [reduce using rule 40 (statement)]
    PRIVATE       [reduce using rule 40 (statement)]
    INTEGER       [reduce using rule 40 (statement)]
    CHAR          [reduce using rule 40 (statement)]
    DOUBLE        [reduce using rule 40 (statement)]
    BOOLEAN       [reduce using rule 40 (statement)]
    STRING        [reduce using rule 40 (statement)]
    VOID          [reduce using rule 40 (statement)]
    RETURN        [reduce using rule 40 (statement)]
    IF            [reduce using rule 40 (statement)]
    SWITCH        [reduce using rule 40 (statement)]
    DO            [reduce using rule 40 (statement)]
    FOR           [reduce using rule 40 (statement)]
    BREAK         [reduce using rule 40 (statement)]
    PRINT         [reduce using rule 40 (statement)]
    DQ_STRING_DQ  [reduce using rule 40 (statement)]
    ADD           [reduce using rule 40 (statement)]
    SUB           [reduce using rule 40 (statement)]
    LP            [reduce using rule 40 (statement)]
    NOT           [reduce using rule 40 (statement)]
    $default      reduce using rule 1 (program)

    program               go to state 26
    class_declaration     go to state 27
    assignment_list       go to state 28
    variable_declaration  go to state 29
    variable_reference    go to state 30
    method_declaration    go to state 31
    statement             go to state 32
    method_call           go to state 33
    if_statement          go to state 34
    do_while_statement    go to state 35
    for_statement         go to state 36
    switch_statement      go to state 37
    return_statement      go to state 38
    break_statement       go to state 39
    print_statement       go to state 40
    exp                   go to state 41
    factor                go to state 42
    term                  go to state 43
    relational_exp        go to state 44
    relational_factor     go to state 45
    logical_term          go to state 46
    unary                 go to state 47
    primary               go to state 48
    object_creation       go to state 49
    member_access         go to state 50
    access_modifier       go to state 51
    data_type             go to state 52


State 1

  125 primary: CONST •

    $default  reduce using rule 125 (primary)


State 2

   13 assignment_list: ID • ASSIGN exp
   14                | ID • ASSIGN exp COMMA assignment_list
   15                | ID • ASSIGN DQ_STRING_DQ
   16                | ID • ASSIGN DQ_STRING_DQ COMMA assignment_list
   17                | ID • ASSIGN variable_reference
   18                | ID • ASSIGN variable_reference COMMA assignment_list
   19                | ID • ASSIGN method_call
   20                | ID • ASSIGN method_call COMMA assignment_list
   21                | ID • ASSIGN object_creation
   22                | ID • ASSIGN object_creation COMMA assignment_list
   28 variable_reference: ID •
   59 method_call: ID • LP none_or_newlines none_or_multiple_arguments none_or_newlines RP SEMICOLON
  132 member_access: ID • DOT member_access_body $@5 none_or_newlines

    DOT     shift, and go to state 53
    LP      shift, and go to state 54
    ASSIGN  shift, and go to state 55

    $default  reduce using rule 28 (variable_reference)


State 3

  130 object_creation: CLASS_ID • ID ASSIGN NEW CLASS_ID LP RP SEMICOLON

    ID  shift, and go to state 56


State 4

  126 primary: DOUBLE_CONST •

    $default  reduce using rule 126 (primary)


State 5

    7 class_declaration: CLASS • CLASS_ID LCB $@2 none_or_newlines class_body none_or_newlines RCB

    CLASS_ID  shift, and go to state 57


State 6

  135 access_modifier: PUBLIC •

    $default  reduce using rule 135 (access_modifier)


State 7

  136 access_modifier: PRIVATE •

    $default  reduce using rule 136 (access_modifier)


State 8

  138 data_type: INTEGER •

    $default  reduce using rule 138 (data_type)


State 9

  139 data_type: CHAR •

    $default  reduce using rule 139 (data_type)


State 10

  140 data_type: DOUBLE •

    $default  reduce using rule 140 (data_type)


State 11

  141 data_type: BOOLEAN •

    $default  reduce using rule 141 (data_type)


State 12

  142 data_type: STRING •

    $default  reduce using rule 142 (data_type)


State 13

  143 data_type: VOID •

    $default  reduce using rule 143 (data_type)


State 14

   94 return_statement: RETURN • exp SEMICOLON
   95                 | RETURN • variable_reference SEMICOLON
   96                 | RETURN • method_call SEMICOLON

    CONST         shift, and go to state 1
    ID            shift, and go to state 58
    DOUBLE_CONST  shift, and go to state 4
    ADD           shift, and go to state 22
    SUB           shift, and go to state 23
    LP            shift, and go to state 24

    variable_reference  go to state 59
    method_call         go to state 60
    exp                 go to state 61
    factor              go to state 42
    term                go to state 43
    unary               go to state 62
    primary             go to state 48


State 15

   66 if_statement: IF • LP none_or_newlines exp none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else
   67             | IF • LP none_or_newlines relational_exp none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else
   68             | IF • LP none_or_newlines variable_reference none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else
   69             | IF • LP none_or_newlines method_call none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB none_or_newlines none_or_multiple_elif none_or_newlines none_or_one_else

    LP  shift, and go to state 63


State 16

   84 switch_statement: SWITCH • LP none_or_newlines exp none_or_newlines RP LCB none_or_newlines one_or_more_cases none_or_newlines default_case none_or_newlines RCB
   85                 | SWITCH • LP none_or_newlines SQ_ANYCHAR_SQ none_or_newlines RP LCB none_or_newlines one_or_more_cases none_or_newlines default_case none_or_newlines RCB

    LP  shift, and go to state 64


State 17

   77 do_while_statement: DO • LCB none_or_newlines statement none_or_newlines RCB WHILE LP none_or_newlines relational_exp none_or_newlines RP SEMICOLON
   78                   | DO • LCB none_or_newlines statement none_or_newlines RCB WHILE LP none_or_newlines variable_reference none_or_newlines RP SEMICOLON

    LCB  shift, and go to state 65


State 18

   79 for_statement: FOR • LP none_or_newlines first_and_third_loop_statement SEMICOLON none_or_newlines second_loop_statement SEMICOLON none_or_newlines first_and_third_loop_statement none_or_newlines RP LCB none_or_newlines statement none_or_newlines RCB

    LP  shift, and go to state 66


State 19

   97 break_statement: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 67


State 20

   98 print_statement: PRINT • LP DQ_STRING_DQ single_or_multiple_variables RP SEMICOLON

    LP  shift, and go to state 68


State 21

   51 statement: DQ_STRING_DQ • SEMICOLON none_or_newlines statement

    SEMICOLON  shift, and go to state 69


State 22

  123 unary: ADD • primary

    CONST         shift, and go to state 1
    ID            shift, and go to state 70
    DOUBLE_CONST  shift, and go to state 4
    LP            shift, and go to state 24

    variable_reference  go to state 71
    primary             go to state 72


State 23

  124 unary: SUB • primary

    CONST         shift, and go to state 1
    ID            shift, and go to state 70
    DOUBLE_CONST  shift, and go to state 4
    LP            shift, and go to state 24

    variable_reference  go to state 71
    primary             go to state 73


State 24

  128 primary: LP • exp RP
  129        | LP • relational_exp RP

    CONST         shift, and go to state 1
    ID            shift, and go to state 70
    DOUBLE_CONST  shift, and go to state 4
    ADD           shift, and go to state 22
    SUB           shift, and go to state 23
    LP            shift, and go to state 24
    NOT           shift, and go to state 25

    variable_reference  go to state 71
    exp                 go to state 74
    factor              go to state 42
    term                go to state 43
    relational_exp      go to state 75
    relational_factor   go to state 45
    logical_term        go to state 46
    unary               go to state 47
    primary             go to state 48


State 25

  121 logical_term: NOT • unary

    CONST         shift, and go to state 1
    ID            shift, and go to state 70
    DOUBLE_CONST  shift, and go to state 4
    ADD           shift, and go to state 22
    SUB           shift, and go to state 23
    LP            shift, and go to state 24

    variable_reference  go to state 71
    unary               go to state 76
    primary             go to state 48


State 26

    0 $accept: program • $end

    $end  shift, and go to state 77


State 27

    2 program: class_declaration • none_or_newlines program

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 79


State 28

   27 variable_declaration: assignment_list •

    $default  reduce using rule 27 (variable_declaration)


State 29

   52 statement: variable_declaration • SEMICOLON none_or_newlines statement

    SEMICOLON  shift, and go to state 80


State 30

   55 statement: variable_reference • SEMICOLON none_or_newlines statement
  127 primary: variable_reference •

    SEMICOLON  shift, and go to state 81

    SEMICOLON  [reduce using rule 127 (primary)]
    $default   reduce using rule 127 (primary)


State 31

   53 statement: method_declaration • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 82


State 32

    3 program: statement • none_or_newlines program

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 83


State 33

   41 statement: method_call • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 84


State 34

   42 statement: if_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 85


State 35

   43 statement: do_while_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 86


State 36

   44 statement: for_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 87


State 37

   45 statement: switch_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 88


State 38

   46 statement: return_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 89


State 39

   47 statement: break_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 90


State 40

   48 statement: print_statement • none_or_newlines statement

    NEWLINE  shift, and go to state 78

    NEWLINE   [reduce using rule 144 (none_or_newlines)]
    $default  reduce using rule 144 (none_or_newlines)

    none_or_newlines  go to state 91


State 41

   49 statement: exp • SEMICOLON none_or_newlines statement
  102 exp: exp • ADD factor
  103    | exp • SUB factor

    SEMICOLON  shift, and go to state 92
    ADD        shift, and go to state 93
    SUB        shift, and go to state 94


State 42

  101 exp: factor •
  105 factor: factor • MUL term
  106       | factor • DIV term
  107       | factor • MOD term

    MUL  shift, and go to state 95
    DIV  shift, and go to state 96
    MOD  shift, and go to state 97

    $default  reduce using rule 101 (exp)


State 43

  104 factor: term •
  109 term: term • POW unary

    POW  shift, and go to state 98

    $default  reduce using rule 104 (factor)


State 44

   50 statement: relational_exp • SEMICOLON none_or_newlines statement
  111 relational_exp: relational_exp • EQ relational_factor
  112               | relational_exp • NEQ relational_factor
  113               | relational_exp • LT relational_factor
  114               | relational_exp • GT relational_factor
  115               | relational_exp • LE relational_factor
  116               | relational_exp • GE relational_factor

    SEMICOLON  shift, and go to state 99
    EQ         shift, and go to state 100
    NEQ        shift, and go to state 101
    LT         shift, and go to state 102
    GT         shift, and go to state 103
    LE         shift, and go to state 104
    GE         shift, and go to state 105


State 45

  110 relational_exp: relational_factor •
  118 relational_factor: relational_factor • AND logical_term
  119                  | relational_factor • OR logical_term
